AC_INIT(neutrinoHD2-plugins,0.0.1,,neutrinoHD2-plugins)
AM_INIT_AUTOMAKE(neutrinoHD2-plugins,0.0.1)

TUXBOX_APPS
TUXBOX_APPS_DIRECTORY
TUXBOX_APPS_DVB
TUXBOX_BOXTYPE

AC_PROG_CC
AC_PROG_CXX
AC_DISABLE_STATIC
AM_PROG_LIBTOOL

TUXBOX_APPS_LIB_CONFIG(FREETYPE,freetype-config)
TUXBOX_APPS_LIB_CONFIG(CURL,curl-config)
TUXBOX_APPS_LIB_PKGCONFIG(PNG,libpng)

AC_OUTPUT([
Makefile
test/Makefile
netzkino/Makefile
fbcallmonitor/Makefile
youtube/Makefile
systeminfo/Makefile
tuxdns/Makefile
restart_enigma/Makefile
tuxcom/Makefile
dvdplayer/Makefile
mediaplayer/Makefile
tuxcal/Makefile
tuxcal/daemon/Makefile
mediaportal/Makefile
nglcd/Makefile
fileexplorer/Makefile
])
