SUBDIRS = \
	connection \
	libeventserver \
	sectionsdclient \
	timerdclient \
	libconfigfile \
	libmd5sum \
	libnet \
	libxmltree \
	libtuxtxt \
	libdvbsub \
	libupnpclient

if !BOXTYPE_COOLSTREAM
SUBDIRS += libdvbapi
endif

if ENABLE_LIBEPLAYER3
SUBDIRS += libeplayer3
endif

if ENABLE_LCD
SUBDIRS += liblcddisplay
endif





